Fix code tags for dark mode

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -136,7 +136,7 @@ hr:before {
     }
 
     code {
-        @apply .bg-gray-600 .text-gray-400 .border-gray-600 .border
+        @apply .bg-gray-800 .text-gray-400 .border-gray-600 .border
     }
 
     pre {
